# ros2-lidar-perception-suite

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/pcl_car_segmentation/lib/pcl_car_segmentation/: car_segmentation_by_clusters  cloud_pre_processing
install/pcl_car_segmentation/share/pcl_car_segmentation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pcl_car_segmentation/share/pcl_car_segmentation/cmake/: pcl_car_segmentationConfig-version.cmake  pcl_car_segmentationConfig.cmake
install/pcl_ground_segmentation/lib/pcl_ground_segmentation/: ground_segmentation
install/pcl_ground_segmentation/share/pcl_ground_segmentation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pcl_human_segmentation/share/pcl_human_segmentation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
pcl_car_segmentation/: CMakeLists.txt  README.md
pcl_car_segmentation/config/: car_segmentation_config.rviz  perception_pipeline.yaml
pcl_car_segmentation/launch/: perception_pipeline.launch.py
pcl_car_segmentation/src/: car_segmentation_by_clusters.cpp  cloud_pre_processing.cpp
pcl_demo_data/: package.xml  setup.cfg  setup.py
pcl_demo_data/pcl_demo_data/: synthetic_pointcloud_publisher.py
pcl_preprocessing/: CMakeLists.txt  package.xml
(+22 files in other folders)
